Fixing top header for canvas alignment

--- a/main.css
+++ b/main.css
@@ -20,7 +20,6 @@ BODY {
 #header img {
 	width: 50px;
 	display: inline;
-	margin-top:5px;
 }
 #header h1 {
 	margin:0;
